src/test/data/highlighting/unexpected-annotations.tz
code {
       PUSH int 123 <error descr="Unexpected annotations">@a :b %c</error>;
       PUSH (pair int int <error descr="Unexpected annotations">@a :b %c</error>) (Pair 123 123);
     }